# gnu_ioxx

./: .gitignore  AUTHORS  ChangeLog  Doxyfile  Jamfile.v2  Makefile  Makefile.am  NEWS  Odinfile  README  TODO  bootstrap.sh  cfg.mk  configure.ac  hot-var.hpp  iostring.hpp  iovector.hpp  logging.cpp  logging.hpp  memory.hpp  pollvec.hpp  pollvector.hh  probe-poll.cpp  probe.hpp  scheduler.cc  scheduler.hh  shared-handler.hpp  socket.hpp  stream-buffer.hpp  test-iovector.cpp  test.cc  writer.hpp
build-aux/: .gitignore  ax_config_feature.m4  ax_have_boost_unit_test_framework.m4  ax_have_epoll.m4  ax_have_logxx.m4  ax_have_poll.m4  ax_have_select.m4  ax_prefix_config_h.m4  ax_with_prog.m4  disttar.sh  ioxx_enable_feature.m4  redate-include-guards.sh
doc/: Doxyfile  Doxyfile.in  Makefile.am
experimental/: system-error.hpp
include/: Makefile.am  ioxx.hpp
include/ioxx/: acceptor.hpp  config.hpp  config.hpp.in  core.hpp  demux.hpp  dispatch.hpp  dns.hpp  error.hpp  iovec.hpp  probe-epoll-impl.hpp  probe-poll-impl.hpp  probe-select-impl.hpp  probe.hpp  probe_epoll_impl.hpp  probe_select_impl.hpp  resolver.hpp  schedule.hpp  scheduler.hpp  signal.hpp  signals.hpp  socket.hpp  socket_event.hpp  time.hpp  timeout.hpp  timer.hpp
include/ioxx/demux/: epoll.hpp  poll.hpp  select.hpp
include/ioxx/detail/: adns.hpp  config.hpp.in  epoll.hpp  error.hpp  logging.hpp  poll.hpp  select.hpp  show.hpp  signals.hpp  socket.hpp
include/ioxx/resolver/: adns.hpp
include/ioxx/type/: byte-range.hpp  byte.hpp  system-time.hpp  time.hpp  weak-socket.hpp
ioxx/: Jamfile.v2  config.hpp  memory.hpp  os.hpp  probe.hpp  scatter-io.hpp  socket.hpp  system.hpp  timeout.hpp
ioxx/os/: iovec-traits.hpp  posix.hpp
ioxx/system/: Jamfile.v2  iovec-traits.hpp  posix.hpp
ioxx/type/: Jamfile.v2  address.hpp  byte-range.hpp  byte.hpp  iovec.hpp  system-error.hpp  system-time.hpp  weak-socket.hpp
legacy/: iovector-traits.hpp  iovector.cpp  ld-version-script  new-socket.cpp  probe.cpp  probe.hpp  socket.cpp  tcp-acceptor.hpp  test-probe.cpp  test-socket.cpp  test-streambuf.cpp  time-of-day.hpp
src/: Jamfile.v2  Makefile.am  hot-fd.hpp  probe-poll.cpp  probe-socket.cpp  probe.cpp  scatter-io.cpp  socket.cpp  system-error.cpp  system-time.cpp  weak-socket.cpp
test/: .gitignore  Jamfile.v2  Jamroot  Makefile.am  address.cpp  adns-logging-test.cpp  core.cpp  core.hpp  daytime.hpp  demux-epoll.cpp  demux.cpp  dispatch.cpp  dns.cpp  echo.hpp  inetd.cpp  iovec-is-valid-range.cpp  memory.cpp  probe.cpp  resolver.cpp  scatter-io.cpp  schedule.cpp  scheduler.cpp  socket.cpp  timeout.cpp
