# ~/include/Makefile.am

EXTRA_DIST = \
  ioxx/detail/config.hpp.in

nobase_nodist_include_HEADERS = \
  ioxx/detail/config.hpp

nobase_include_HEADERS = \
  ioxx.hpp \
  ioxx/acceptor.hpp \
  ioxx/demux.hpp \
  ioxx/detail/adns.hpp \
  ioxx/detail/epoll.hpp \
  ioxx/detail/error.hpp \
  ioxx/detail/poll.hpp \
  ioxx/detail/select.hpp \
  ioxx/detail/signals.hpp \
  ioxx/detail/socket.hpp \
  ioxx/dispatch.hpp \
  ioxx/dns.hpp \
  ioxx/iovec.hpp \
  ioxx/schedule.hpp \
  ioxx/time.hpp

CLEANFILES = \
  ioxx/detail/config.hpp.in~

MAINTAINERCLEANFILES = \
  Makefile.in
