# ~/include/Makefile.am

EXTRA_DIST = \
  ioxx/detail/config.hpp.in

nobase_nodist_include_HEADERS = \
  ioxx/detail/config.hpp

nobase_include_HEADERS = \
  ioxx.hpp \
  ioxx/acceptor.hpp \
  ioxx/core.hpp \
  ioxx/detail/adns.hpp \
  ioxx/detail/epoll.hpp \
  ioxx/detail/logging.hpp \
  ioxx/detail/poll.hpp \
  ioxx/detail/select.hpp \
  ioxx/detail/show.hpp \
  ioxx/dispatch.hpp \
  ioxx/error.hpp \
  ioxx/iovec.hpp \
  ioxx/schedule.hpp \
  ioxx/signals.hpp \
  ioxx/socket.hpp \
  ioxx/time.hpp

CLEANFILES = \
  ioxx/detail/config.hpp.in~

MAINTAINERCLEANFILES = \
  Makefile.in
