# Build the ioxx library.
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

nobase_nodist_include_HEADERS = \
  ioxx/detail/config.hpp

nobase_include_HEADERS = \
  ioxx.hpp \
  ioxx/acceptor.hpp \
  ioxx/core.hpp \
  ioxx/detail/adns.hpp \
  ioxx/detail/epoll.hpp \
  ioxx/detail/logging.hpp \
  ioxx/detail/poll.hpp \
  ioxx/detail/select.hpp \
  ioxx/detail/show.hpp \
  ioxx/dispatch.hpp \
  ioxx/error.hpp \
  ioxx/iovec.hpp \
  ioxx/schedule.hpp \
  ioxx/signal.hpp \
  ioxx/socket.hpp \
  ioxx/time.hpp

MAINTAINERCLEANFILES = \
  Makefile.in

DISTCLEANFILES = \
  ioxx/detail/config.hpp
